[package]
name = "lrgp"
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Lightweight Reticulum Gaming Protocol — multiplayer games over LXMF mesh networks"
repository = "https://github.com/ratspeak/lrgp-rs"
keywords = ["reticulum", "lxmf", "gaming", "mesh", "off-grid"]
categories = ["network-programming", "encoding", "game-development"]

[dependencies]
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tracing-subscriber = "0.3"
